Fixed benefits on mobile

--- a/wp-content/themes/drivers-benefits/scss/_header.scss
+++ b/wp-content/themes/drivers-benefits/scss/_header.scss
@@ -73,10 +73,6 @@
 				width: 12px;
 				margin-left: auto;
 			}
-
-			&:focus {
-				outline-color: $primary;
-			}
 		}
 
 		.dropdown-item {
