--- a/wp-content/themes/drivers-benefits/scss/main.scss
+++ b/wp-content/themes/drivers-benefits/scss/main.scss
@@ -15,9 +15,13 @@ body {
 	background-color: $body-bg;
 
 	@media (max-width: 800px) {
-		height: 100%;
-		overflow-y: scroll;
+		/*height: 100%;*/
+		/*overflow-y: scroll;*/
 	}
 }
 
 @import './bootstrap/_bootstrap';
+
+button:focus {
+	outline-color: $primary;
+}
